--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,55 @@
 	<link rel="stylesheet" href="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/flowbite.min.css"/>
 	<script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 	<script src="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/flowbite.bundle.js"></script>
-
+	<script>
+		tailwind.config = {
+			theme: {
+				extend: {
+					colors: {
+						violet: '#5964e0',
+						'light-violet': '#939bf4',
+						'very-dark-blue': '#19202d',
+						midnight: '#121721',
+						white: '#ffffff',
+						'light-grey': '#f4f6f8',
+						grey: '#9daec2',
+						'dark-grey': '#6e8098',
+						debug: {
+							50: '#fff1f2',
+							100: '#ffe4e6',
+							200: '#fecdd3',
+							300: '#dfa4af',
+							400: '#fb7185',
+							500: '#f43f5e',
+							600: '#e11d48',
+							700: '#be123c',
+							800: '#9f1239',
+							900: '#881337'
+						}
+					},
+					fontFamily: {
+						sans: ['Kumbh Sans', 'sans-serif'],
+					},
+					lineHeight: {
+						'h1': '2.125rem',
+						'h2': '1.8125rem',
+						'h3': '1.5rem',
+						'h4': '1.125rem',
+						'body': '1.625rem',
+					},
+					fontSize: {
+						'h1': '1.75rem',
+						'h2': '1.5rem',
+						'h3': '1.25rem',
+						'h4': '0.875rem',
+						'body': '1rem',
+					},
+				}
+			}
+		}
+	</script>
 </head>
 
-<body>
+<body class="bg-light-grey dark:bg-midnight">
 </body>
 </html>
