Add frontendmentor favicon. Comment out flowbite cdn include. Comment out global.css
Signed-off-by: Aalekh Patel <aalekh.gwpeck.7998@icloud.com>

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<meta name="description" content="Platform for developer job postings.">
+	<meta name="keywords" content="Jobs, Developer, Platform, Search">
+	<meta name="author" content="Aalekh Patel">
 
-	<title>Svelte app</title>
+	<title>Devjobs</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
+	<!-- <link rel='stylesheet' href='/global.css'> -->
 	
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<script defer src='/build/bundle.js'></script>
 
-	<link rel="stylesheet" href="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/flowbite.min.css"/>
-	<script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-	<script src="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/flowbite.bundle.js"></script>
+	<!-- <link rel="stylesheet" href="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/flowbite.min.css"/> -->
+	<script src="https://cdn.tailwindcss.com"></script>
+	<!-- <script src="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/flowbite.bundle.js"></script> -->
 	<script>
 		tailwind.config = {
 			theme: {
