Add routing and integrate job details page into it.
Signed-off-by: Aalekh Patel <aalekh.gwpeck.7998@icloud.com>

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,6 @@
 	</script>
 </head>
 
-<body class="bg-light-grey dark:bg-midnight">
+<body class="bg-light-grey dark:bg-midnight duration-200">
 </body>
 </html>
