Ipad margin fix.
Signed-off-by: Aalekh Patel <aalekh.gwpeck.7998@icloud.com>

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	<script>
 		// TailwindCSS dark mode universal setting.
 		window.onload = () => {
-			setupThemePreference();
+			// setupThemePreference();
 		}
 		
 		function setupThemePreference() {
